tests/baselines/reference/S7.8.4_A3.2_T1.errors.txt
S7.8.4_A3.2_T1.ts(15,6): error TS1002: Unterminated string literal.


==== S7.8.4_A3.2_T1.ts (1 errors) ====
    // Copyright 2009 the Sputnik authors.  All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /*---
    info: "StringLiteral :: \"\\\\\\\" or '\\\\\\' is not correct"
    es5id: 7.8.4_A3.2_T1
    description: Checking if execution of "\\\" fails
    negative:
      phase: parse
      type: SyntaxError
    ---*/
    
    
    //CHECK#1
    "\\\"
         
!!! error TS1002: Unterminated string literal.
    